tattoo_view url

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 								</header>
 								<a href="#" class="image main"><img src="images/tattoo_view.jpg" alt="" /></a>
 								<ul class="actions special">
-									<li><a href="#" class="button large">Tattoo View</a></li>
+									<li><a href="https://tattoo-view.herokuapp.com/" class="button large">Tattoo View</a></li>
 								</ul>
 							</article>
 
