--- a/index.html
+++ b/index.html
@@ -56,26 +56,24 @@
 							<section class="posts">
 								<article>
 									<header>
-										<span class="date">April 24, 2017</span>
-										<h2><a href="#">Sed magna<br />
-										ipsum faucibus</a></h2>
+										<h2><a>Machine learning</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
+									<a class="image fit"><img src="images/Machine-Learning-5.jpeg" alt="" /></a>
+									<p>Cada día me intereso más y más con el mundo del análisis de datos, clustering, machine learning y AI.
+									En este pequeño proyecto utilicé datos para predecir (utilizando un algoritmo de predicción) si una persona tendría un ingreso anual >50k de dólares anuales o no.
+ 									</p>
 									<ul class="actions special">
-										<li><a href="#" class="button">Full Story</a></li>
+										<li><a href="https://github.com/amartini93/DecisionTree" class="button">Checkout the code</a></li>
 									</ul>
 								</article>
 								<article>
 									<header>
-										<span class="date">April 22, 2017</span>
-										<h2><a href="#">Primis eget<br />
-										imperdiet lorem</a></h2>
+										<h2><a>OS</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/pic03.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
+									<a class="image fit"><img src="images/OS_logos.jpg" alt="" /></a>
+									<p>Para esta humilde incursión en sistemas operativos trabaje con xv6 y modifiqué su estructura para realizar diferentes funcionalidades a nivel del OS y de este modo aprender directamente muchos de los conceptos fundamentales de los sistemas operativos y como tratar con ellos.</p>
 									<ul class="actions special">
-										<li><a href="#" class="button">Full Story</a></li>
+										<li><a href="https://github.com/amartini93/xv6-public" class="button">Checkout the code</a></li>
 									</ul>
 								</article>
 							</section>
