--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Massively by HTML5 UP</title>
+		<title>Aldo Martini's portafolio</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -30,7 +30,7 @@
 				<!-- Nav -->
 					<nav id="nav">
 						<ul class="links">
-							<li class="active"><a href="index.html">This is Massively</a></li>
+							<li class="active"><a href="index.html">My projects</a></li>
 						</ul>
 						<ul class="icons">
 							<li><a href="https://github.com/amartini93" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
@@ -43,13 +43,14 @@
 						<!-- Featured Post -->
 							<article class="post featured">
 								<header class="major">
-									<h2><a href="#">My name is Aldo Martini</a></h2>
+									<h2><a>My name is Aldo Martini</a></h2>
 									<p>I'm a computer sciences engineer but more importantly I'm passionate about technologies</p>
 								</header>
-								<a href="#" class="image main"><img src="images/tattoo_view.jpg" alt="" /></a>
+								<a class="image main"><img src="images/tattoo_view.jpg" alt="" /></a>
+								<p>Este proyecto trató acerca del desarrollo de una red social diseñada para tatuadores y fanáticos de los tatuajes. Basada en django,para tener un framework sólido de desarrollo back end y con pequeñas incursiones de JavaScript para un front end responsivo y atractivo. El resultado me enorgullece debido a lo mucho que aprendí desarrollando esta web app y el conocimiento que me dejó para ponerlo en práctica más adelante.
+								Pretendo seguir trabajando en esta web app e incorporar machine learning para realizar sugerencias a los usuarios basado en sus gustos.</p>
 								<ul class="actions special">
-									<li><a href="https://tattoo-view.herokuapp.com/" class="button large">Tattoo View</a></li>
-								</ul>
+								<li><a href="https://tattoo-view.herokuapp.com/" class="button large">Tattoo View</a></li>
 							</article>
 
 						<!-- Posts -->
