tattoo_view about page

--- a/index.html
+++ b/index.html
@@ -46,11 +46,13 @@
 									<h2><a>My name is Aldo Martini</a></h2>
 									<p>I'm a computer sciences engineer but more importantly I'm passionate about technologies</p>
 								</header>
-								<a class="image main"><img src="images/tattoo_view.jpg" alt="" /></a>
+								<a class="image main"><img src="images/tattoo_view.jpg"></a>
 								<p>Este proyecto trató acerca del desarrollo de una red social diseñada para tatuadores y fanáticos de los tatuajes. Basada en django,para tener un framework sólido de desarrollo back end y con pequeñas incursiones de JavaScript para un front end responsivo y atractivo. El resultado me enorgullece debido a lo mucho que aprendí desarrollando esta web app y el conocimiento que me dejó para ponerlo en práctica más adelante.
 								Pretendo seguir trabajando en esta web app e incorporar machine learning para realizar sugerencias a los usuarios basado en sus gustos.</p>
 								<ul class="actions special">
-								<li><a href="https://tattoo-view.herokuapp.com/about/" class="button large">Tattoo View</a></li>
+								<li><a href="https://tattoo-view.herokuapp.com/about/" class="button large">Tattoo View app</a></li>
+								<ul class="actions special">
+								<li><a href="https://github.com/amartini93/TattooView" class="button large">Checkout the code</a></li>
 							</article>
 
 						<!-- Posts -->
@@ -64,7 +66,7 @@
 									En este pequeño proyecto utilicé datos para predecir (utilizando un algoritmo de predicción) si una persona tendría un ingreso anual >50k de dólares anuales o no.
  									</p>
 									<ul class="actions special">
-										<li><a href="https://github.com/amartini93/DecisionTree" class="button">Checkout the code</a></li>
+										<li><a href="https://github.com/amartini93/DecisionTree" class="button">C</a></li>
 									</ul>
 								</article>
 								<article>
