tattoo_view about page

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 									En este pequeño proyecto utilicé datos para predecir (utilizando un algoritmo de predicción) si una persona tendría un ingreso anual >50k de dólares anuales o no.
  									</p>
 									<ul class="actions special">
-										<li><a href="https://github.com/amartini93/DecisionTree" class="button">C</a></li>
+										<li><a href="https://github.com/amartini93/DecisionTree" class="button">Checkout the code</a></li>
 									</ul>
 								</article>
 								<article>
