--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 								<p>Este proyecto trató acerca del desarrollo de una red social diseñada para tatuadores y fanáticos de los tatuajes. Basada en django,para tener un framework sólido de desarrollo back end y con pequeñas incursiones de JavaScript para un front end responsivo y atractivo. El resultado me enorgullece debido a lo mucho que aprendí desarrollando esta web app y el conocimiento que me dejó para ponerlo en práctica más adelante.
 								Pretendo seguir trabajando en esta web app e incorporar machine learning para realizar sugerencias a los usuarios basado en sus gustos.</p>
 								<ul class="actions special">
-								<li><a href="https://tattoo-view.herokuapp.com/about/" class="button large">Tattoo View app</a></li>
+								<li><a href="https://tattoo-view.herokuapp.com" class="button large">Tattoo View app</a></li>
 								<ul class="actions special">
 								<li><a href="https://github.com/amartini93/TattooView" class="button large">Checkout the code</a></li>
 							</article>
