--- a/index.html
+++ b/index.html
@@ -45,12 +45,14 @@
 								<header class="major">
 									<h2><a>My name is Aldo Martini</a></h2>
 									<p>I'm a computer sciences engineer but more importantly I'm passionate about technologies</p>
+									<p>This portfolio was designed for spanish readers when I was looking for a job in my country. I'll update when I get time.</p>
 								</header>
 								<a class="image main"><img src="images/tattoo_view.jpg"></a>
 								<p>Este proyecto trató acerca del desarrollo de una red social diseñada para tatuadores y fanáticos de los tatuajes. Basada en django,para tener un framework sólido de desarrollo back end y con pequeñas incursiones de JavaScript para un front end responsivo y atractivo. El resultado me enorgullece debido a lo mucho que aprendí desarrollando esta web app y el conocimiento que me dejó para ponerlo en práctica más adelante.
 								Pretendo seguir trabajando en esta web app e incorporar machine learning para realizar sugerencias a los usuarios basado en sus gustos.</p>
 								<ul class="actions special">
 								<li><a href="https://tattoo-view.herokuapp.com" class="button large">Tattoo View app</a></li>
+								<li><p>The images in the site are currently broken. I used an AWS free tier service for image hosting and didn't upgrade when they started charging me</p></li>
 								<ul class="actions special">
 								<li><a href="https://github.com/amartini93/TattooView" class="button large">Checkout the code</a></li>
 							</article>
